[package]
name = "secretary"
version = "0.1.0"
authors = ["Yusuke Shimizu <44394399+rabhareit@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1.1.1", features = ["full"]}
whoami = "1.1.0"
clap = "2.20.3"
